[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Modules/UI/Main Menu/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HighScore" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -451.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
custom_constants/separation = 128
alignment = 1

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 600.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 364.0
margin_right = 600.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
